--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section id="products" class="product-grid"></section>
     </main>
     <footer>
-        <div>© 2025 MyShop • Inspired by Amazon</div>
+        <div>© 2025 MyShop </div>
     </footer>
     <script src="script.js"></script>
 </body>
