--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
     <header class="banner">
         <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1400&q=80" alt="Banner">
-        <div class="banner-text">Big Discounts! Shop Now Like Amazon</div>
+        <div class="banner-text">Big Discounts! </div>
     </header>
     <main>
         <h2 class="section-title">Top Deals</h2>
