--- a/seller_order.html
+++ b/seller_order.html
@@ -7,6 +7,18 @@
   <style>
     body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 2rem; background: #f4f8fc; }
     h1 { color: #0070f3; margin-bottom: 1.5rem; }
+    #status-message {
+      display: none;
+      padding: 12px 18px;
+      margin-bottom: 18px;
+      background: #e3fbe3;
+      color: #066306;
+      border-radius: 6px;
+      font-weight: bold;
+      letter-spacing: 0.5px;
+      box-shadow: 0 1px 5px #c0f6ca;
+      text-align: center;
+    }
     table { width: 100%; border-collapse: collapse; box-shadow: 0 1px 6px #ccc; background: white; }
     th, td { padding: 10px; border: 1px solid #ddd; text-align: left; }
     th { background: #eef5ff; }
@@ -17,6 +29,7 @@
   </style>
 </head>
 <body>
+<div id="status-message"></div>
 <h1>Seller Order Management</h1>
 <table id="orders-table">
   <thead>
@@ -25,6 +38,7 @@
     <th>Customer</th>
     <th>Status</th>
     <th>Created At</th>
+    <th>HSN Code(s)</th>
     <th>Actions</th>
   </tr>
   </thead>
@@ -32,8 +46,8 @@
 </table>
 
 <div id="invoice-modal" style="display:none; position:fixed; top:10%; left:50%; transform:translateX(-50%); background:white; padding:20px; border-radius:8px; box-shadow:0 0 15px rgba(0,0,0,0.3); max-width:600px; max-height:80vh; overflow:auto; z-index:100;">
-  <button onclick="closeInvoice()" style="float:right; background:none; border:none; font-size:22px; cursor:pointer;">×</button>
-  <button onclick="printInvoice()" style="float:right; margin-right:10px; background:#3498db; color:#fff; border:none; border-radius:5px; font-size:15px; padding:5px 14px; cursor:pointer;">Print</button>
+  <button id="close-invoice" style="float:right; background:none; border:none; font-size:22px; cursor:pointer;">×</button>
+  <button id="print-invoice" style="float:right; margin-right:10px; background:#3498db; color:#fff; border:none; border-radius:5px; font-size:15px; padding:5px 14px; cursor:pointer;">Print</button>
   <div style="clear:both"></div>
   <div id="invoice-html"></div>
 </div>
@@ -44,6 +58,15 @@
     'https://wamqheltqmufuzrqlxlb.supabase.co',
     'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndhbXFoZWx0cW11ZnV6cnFseGxiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjEwOTQxMzAsImV4cCI6MjA3NjY3MDEzMH0.xFtK5p22bHNzWcGXUgRUR5f-Q4SGdQperlPf4ItD2sY'
   );
+
+  function showStatusMessage(msg, colorBg='#e3fbe3', colorText='#066306') {
+    const div = document.getElementById('status-message');
+    div.textContent = msg;
+    div.style.display = 'block';
+    div.style.background = colorBg;
+    div.style.color = colorText;
+    setTimeout(() => { div.style.display = 'none'; }, 2500);
+  }
 
   async function loadSellerOrders() {
     const { data: { user } } = await supabase.auth.getUser();
@@ -65,14 +88,15 @@
           product_id,
           quantity,
           price,
+          hsn_code,
           products(name, seller_id),
-          profiles_seller: seller_id (id, name, address, email)
+          profiles_seller: seller_id (id, name, address, email, gst_number, pan_number)
         )
       `)
       .order('created_at', { ascending: false });
 
     if (error) {
-      alert('Failed to load orders: ' + error.message);
+      showStatusMessage('Failed to load orders: ' + error.message, '#ffeded', '#a10021');
       return;
     }
 
@@ -84,28 +108,64 @@
     const tbody = document.querySelector('#orders-table tbody');
     tbody.innerHTML = '';
     sellerOrders.forEach(order => {
+      const hsnCodes = order.order_items.map(item => item.hsn_code || '-').join(', ');
       const tr = document.createElement('tr');
       tr.innerHTML = `
         <td>${order.id}</td>
         <td>${order.profiles.name}</td>
         <td>${order.status}</td>
         <td>${new Date(order.created_at).toLocaleString()}</td>
-        <td>
-          ${order.status === 'pending' ? `<button class="btn-confirm" onclick="updateOrderStatus(${order.id}, 'confirmed')">Confirm</button>` : ''}
-          ${order.status === 'confirmed' ? `<button class="btn-deliver" onclick="updateOrderStatus(${order.id}, 'delivered')">Mark Delivered</button>` : ''}
-          <button class="btn-invoice" onclick="showInvoice(${order.id})">Invoice</button>
-        </td>
+        <td>${hsnCodes}</td>
+        <td></td>
       `;
       tbody.appendChild(tr);
+
+      const actionTd = tr.querySelector('td:last-child');
+
+      if (order.status === 'pending') {
+        const confirmBtn = document.createElement('button');
+        confirmBtn.className = 'btn-confirm';
+        confirmBtn.textContent = 'Confirm';
+        confirmBtn.onclick = () => updateOrderStatus(order.id, 'confirmed');
+        actionTd.appendChild(confirmBtn);
+      }
+
+      if (order.status === 'confirmed') {
+        const deliverBtn = document.createElement('button');
+        deliverBtn.className = 'btn-deliver';
+        deliverBtn.textContent = 'Mark Delivered';
+        deliverBtn.onclick = () => updateOrderStatus(order.id, 'delivered');
+        actionTd.appendChild(deliverBtn);
+      }
+
+      const invoiceBtn = document.createElement('button');
+      invoiceBtn.className = 'btn-invoice';
+      invoiceBtn.textContent = 'Invoice';
+      invoiceBtn.onclick = () => showInvoice(order.id);
+      actionTd.appendChild(invoiceBtn);
     });
   }
 
   async function updateOrderStatus(orderId, newStatus) {
+    let actionMsg = '';
+    if (newStatus === 'confirmed') {
+      actionMsg = 'Order confirmation processing...';
+    } else if (newStatus === 'delivered') {
+      actionMsg = 'Delivery confirmation processing...';
+    }
+    showStatusMessage(actionMsg);
+
     const { error } = await supabase.from('orders').update({ status: newStatus }).eq('id', orderId);
     if (error) {
-      alert('Failed to update order: ' + error.message);
+      showStatusMessage('Failed to update order: ' + error.message, '#ffeded', '#a10021');
     } else {
-      alert('Order updated to ' + newStatus);
+      showStatusMessage(
+        newStatus === 'confirmed'
+          ? 'Order confirmed!'
+          : newStatus === 'delivered'
+            ? 'Order marked as delivered!'
+            : 'Order updated successfully.'
+      );
       loadSellerOrders();
     }
   }
@@ -121,27 +181,31 @@
         order_items(
           quantity,
           price,
+          hsn_code,
           products(name),
-          profiles_seller: seller_id(name, address, email)
+          profiles_seller: seller_id(name, address, email, gst_number, pan_number)
         )
       `)
       .eq('id', orderId)
       .single();
 
     if (error) {
-      alert('Failed to load invoice: ' + error.message);
+      showStatusMessage('Failed to load invoice: ' + error.message, '#ffeded', '#a10021');
       return;
     }
 
+    let sellerInfo = order.order_items[0]?.profiles_seller || {};
     let html = `
       <h2>Invoice #${order.id}</h2>
       <h3>Status: ${order.status}</h3>
       <h3>Date: ${new Date(order.created_at).toLocaleString()}</h3>
       <hr>
       <h4>Seller Info</h4>
-      <div>Name: ${order.order_items[0]?.profiles_seller?.name || ''}</div>
-      <div>Email: ${order.order_items[0]?.profiles_seller?.email || ''}</div>
-      <div>Address: ${order.order_items[0]?.profiles_seller?.address || ''}</div>
+      <div>Name: ${sellerInfo.name || ''}</div>
+      <div>Email: ${sellerInfo.email || ''}</div>
+      <div>Address: ${sellerInfo.address || ''}</div>
+      <div>GST Number: ${sellerInfo.gst_number || ''}</div>
+      <div>PAN Number: ${sellerInfo.pan_number || ''}</div>
       <hr>
       <h4>Customer Info</h4>
       <div>Name: ${order.profiles.name || ''}</div>
@@ -150,13 +214,14 @@
       <hr>
       <table border="1" cellpadding="4" cellspacing="0" width="100%">
         <thead>
-          <tr><th>Product</th><th>Qty</th><th>Unit Price</th><th>Total</th></tr>
+          <tr><th>Product</th><th>HSN Code</th><th>Qty</th><th>Unit Price</th><th>Total</th></tr>
         </thead>
         <tbody>
     `;
     order.order_items.forEach(item => {
       html += `<tr>
         <td>${item.products.name}</td>
+        <td>${item.hsn_code || '-'}</td>
         <td>${item.quantity}</td>
         <td>₹${item.price}</td>
         <td>₹${item.price * item.quantity}</td>
@@ -184,6 +249,9 @@
     printWindow.focus();
     printWindow.print();
   }
+
+  document.getElementById('close-invoice').onclick = closeInvoice;
+  document.getElementById('print-invoice').onclick = printInvoice;
 
   window.onload = loadSellerOrders;
 </script>
